--- a/css/style.css
+++ b/css/style.css
@@ -142,9 +142,10 @@
   font-family: 'loveloline_light';    */
   font-family: 'proxima_novaregular';
   font-weight: normal;
-  color:rgba(48,61,83,0.7);
+  color:r#fff;
   font-size: 18px;
   position: relative;
+  background-color: #320058;
  }
 .main-page-wrapper {overflow-x:hidden;}
  h1,h2,h3,h4,h5,h6,p,ul { margin:0;padding: 0;}
@@ -186,6 +187,7 @@
   font-size: 55px;
   line-height: 65px;
   font-weight: normal;
+  color: #fff;
 }
 .theme-title .upper-heading {
   font-size: 20px;
@@ -354,7 +356,7 @@ body .theme-button:hover span {opacity: 1;}
 /*----------------------- Theme Banner One -------------------------*/
 .theme-banner-one {
   background-size: cover;
-  background-color: #000;
+  background-color: #320058;
 }
 
 .header-white {
@@ -718,11 +720,36 @@ body .theme-button:hover span {opacity: 1;}
   border-top: 1px dashed #d8e2e9;
   position: absolute;
   top:29%;
+  display: none;
 }
+.our-features-one .single-feature p {
+  color: #fff;
+  margin: 35px 0;
+  text-align: left;
+}
+.our-features-one .single-feature h3 {color: #ea8604;}
 .our-features-one .single-feature.border-fix:before {left:-75px;}
 .our-features-one .single-feature.border-fix:after {right: -75px;}
 /*-------------------- Our Feature Two --------------------*/
-.our-feature-two {padding: 100px 0 320px;}
+.our-feature-two {
+  padding: 100px 0 320px;
+  background-image: url(../images/home/bg7.png);
+}
+.numbers {
+  color: #ea8604;
+  font-size: 45px;
+  font-weight: bolder;
+  margin-right: 15px;
+  opacity: 0.5;
+}
+.here {
+  color: #ea8604;
+  transition: 0.3s ease-in;
+}
+.here:hover {
+  color: #fff;
+  transition: 0.3s ease-in;
+}
 .our-feature-two .text {
   position: relative;
   padding: 0 0 60px 60px;
@@ -762,10 +789,10 @@ body .theme-button:hover span {opacity: 1;}
 .our-feature-two .text .learn-more {
   font-family: 'brandon_grotesquemedium';
   font-size: 22px;
-  color: #3c3c3c;
+  color: #fff;
 }
 .our-feature-two .text .learn-more i {vertical-align: middle;font-size: 25px;margin-left: 12px;}
-.our-feature-two .text p {padding: 30px 0;}
+.our-feature-two .text p {padding: 30px 0; color: #fff;}
 .our-feature-two .img-box img {margin: 60px auto 0;}
 .our-feature-two .single-block:nth-child(1) .text:before {
   content: '';
