--- a/css/style.css
+++ b/css/style.css
@@ -684,6 +684,10 @@ body .theme-button:hover span {opacity: 1;}
   margin: 35px 0;
   text-align: left;
 }
+.our-features-one .single-feature img {
+  margin-bottom: 30px;
+  box-shadow: 5px 5px 100px rgb(228, 228, 228);
+}
 .header {
   color: #838383 !important;
 }
@@ -699,10 +703,10 @@ body .theme-button:hover span {opacity: 1;}
 }
 .numbers {
   color: #ea8604;
-  font-size: 45px;
+  font-size: 25px;
   font-weight: bolder;
   margin-right: 15px;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 .here {
   color: #ea8604;
